18-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service0
  template:
    metadata:
      labels:
        app: service0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      containers:
        - name: service0
          imagePullPolicy: Always
          image: lslsp2/service0:0.12
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          imagePullPolicy: Always
          image: lslsp2/service1:0.12
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          imagePullPolicy: Always
          image: lslsp2/service2:0.12
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service0
spec:
  ports:
    - name: http-service0
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service0
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
    - name: http-service1
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service1
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - name: http-service2
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service0
spec:
  gateways:
    - service0
  hosts:
    - '*'
  http:
  - route:
      - destination:
          host: service0
          port:
            number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service0
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-service0
        protocol: HTTP
      hosts:
        - '*'
