ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - lslsp.com
      secretName: lslsp-tls
  rules:
    - host: httpserver.lslsp.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lslsp-httpserver
                port:
                  number: 80
